# Past_CCC

./: Alice Through the Looking Glass - 40 out of 50.cpp  Alice's Shopping Trip.cpp  Aromatic Numbers.cpp  Arranging Books.cpp  Babbling Brooks.cpp  Bob and Bus Stops.cpp  Boxes.cpp  Bridge Transport.cpp  CMakeLists.txt  Chika Grids.cpp  Computer Purchase.cpp  Cow College.cpp  From 1987 to 2013.cpp  Gates.cpp  Jerseys.cpp  Modern Art.cpp  Multiple Choice.cpp  Pretty Average Primes.cpp  Rövarspråket.cpp  Secret Instructions.cpp  Spreadsheet Sorting.cpp  Surmising a Sprinter's Speed.cpp  TSS Club Fair 2017 Problem B.cpp  Voronoi Villages.cpp
Junior/: 2016j2-arr.cpp  2016j2.cpp  2017j3.cpp  2018j2.cpp  2018j3.cpp  2019j2.cpp  2019j3.cpp  2020j3.cpp
Senior/: 2015s1.cpp  2018s1.cpp  2018s2-arr.cpp  2018s2.cpp
